@@ -61,3 +61,6 @@
         * Add a prefix location finder api to eina. Beta status. needs
         more use from higher up libs/apps first.
 
+2011-04-22  Vincent Torri
+
+        * Fix uninstallation of the mempools modules
